<resources>
    <string name="app_name">Resume</string>
    <string name="todo">TODOvhv</string>
    <string name="work_history">Work History</string>
    <string name="call_monika">Call Monika</string>
    <string name="email_monika">Email Monika</string>
    <string name="monika_rangta">Monika Rangta</string>
    <string name="work_history_activity_text">WORK HISTORY</string>
    <string name="my_mission_in_life_is_not_merely_to_survive_but_to_thrive_and_to_do_so_with_some_passion_some_compassion_some_coding_some_creativity_and_some_style_if_you_have_a_project_that_you_want_to_get_started_think_you_need_my_help_with_something_or_just_fancy_saying_hey_then_get_in_touch">
        My mission in life is not merely to survive, but to thrive; and to do so with some passion, some compassion,
        some coding, some creativity and some style. If you have a project that you want to get started, think you need
        my help with something or just fancy saying hey, then get in touch.

        My mission in life is not merely to survive, but to thrive; and to do so with some passion, some compassion,
        some coding, some creativity and some style. If you have a project that you want to get started, think you need
        my help with something or just fancy saying hey, then get in touch.

        My mission in life is not merely to survive, but to thrive; and to do so with some passion, some compassion,
        some coding, some creativity and some style. If you have a project that you want to get started, think you need
        my help with something or just fancy saying hey, then get in touch.

        My mission in life is not merely to survive, but to thrive; and to do so with some passion, some compassion,
        some coding, some creativity and some style. If you have a project that you want to get started, think you need
        my help with something or just fancy saying hey, then get in touch.

        My mission in life is not merely to survive, but to thrive; and to do so with some passion, some compassion,
        some coding, some creativity and some style. If you have a project that you want to get started, think you need
        my help with something or just fancy saying hey, then get in touch.

        My mission in life is not merely to survive, but to thrive; and to do so with some passion, some compassion,
        some coding, some creativity and some style. If you have a project that you want to get started, think you need
        my help with something or just fancy saying hey, then get in touch.

        My mission in life is not merely to survive, but to thrive; and to do so with some passion, some compassion,
        some coding, some creativity and some style. If you have a project that you want to get started, think you need
        my help with something or just fancy saying hey, then get in touch.

        My mission in life is not merely to survive, but to thrive; and to do so with some passion, some compassion,
        some coding, some creativity and some style. If you have a project that you want to get started, think you need
        my help with something or just fancy saying hey, then get in touch.
    </string>
</resources>
